--- a/tags.html
+++ b/tags.html
@@ -22,8 +22,24 @@
 
   <!-- Правая колонка с фото (нейтральный div-контейнер) -->
   <div class="image-col">
-    <img src="kolob.jpg" alt="Kolobok"   loading="lazy" decoding="async"> <!-- Путь к картинке. альтернативный текст. Исходные размеры, чтобы избежать «скачков» верстки. Оптимизация загрузки -->
+    <img src="kolob.jpg" alt="Kolobok" loading="lazy" decoding="async"> <!-- Путь к картинке. альтернативный текст. Исходные размеры, чтобы избежать «скачков» верстки. Оптимизация загрузки -->
   </div>
+
+</section>
+
+<section class="host-section">
+  
+  <div class="text-col"> <!-- Левая колонка с текстом -->
+    <h2>Teremok</h2>
+    <p>"The Teremok" is a fairy tale that almost every child can retell. It tells about an unusual neighborhood of animals. The essence of the tale is simple: one after another, almost every representative of the forest stumbles upon an abandoned teremok (in some versions - a man's mitten), asks permission to live and stays together until a bear comes to them. How will the fairy tale about hospitable animals end? Find out together with your child from the text below. The fairy tale makes you think about the need to be kind to each other, to be able to share, to give in, and about the importance of taking care of what you have.</p>
+  </div>
+
+  <figure class="image-col"> <!-- Правая колонка: фото как часть контента -->
+    <img src="Terem.jpg" alt="" loading="lazy" decoding="async"> <!-- alt можно оставить пустым, если figcaption описывает фото -->
+
+    <!-- Подпись к фото -->
+    <figcaption>Teremok and the shameless Bear</figcaption>
+  </figure>
 
 </section>
 
