still adding elements

--- a/tags.html
+++ b/tags.html
@@ -43,5 +43,22 @@
 
 </section>
 
+<section class="host-section">
+  
+  <div class="text-col"> <!-- Левая колонка с основным текстом -->
+    <h2>Masha and the Bear - Russian folk tale</h2>
+    <p>Masha and the Bear is an amazing fairy tale about the courage and resourcefulness of a little girl who was not afraid to outwit the bear himself. Mashenka went for a walk in the forest with her friends and got lost, not fulfilling the order of her grandparents. Masha wandered into a clearing and saw a hut. A big bear lived there, he came home in the evening and saw the girl. He was happy, did not let her go home, and Masha had to live in the hut, light the stove and cook porridge. Погоревала девочка и придумала, как от медведя сбежать. Попросила она мишку короб с пирожками в деревню отнести, да только сама в тот короб и прыгнула. Так домой и попала, а медведя обратно в лес прогнали.</p>
+  </div>
+
+  <aside class="image-col"> 
+     <img src="Masha and the Bear.jpg" alt="Masha and the Bear" loading="lazy" decoding="async"> <!-- ✅ Здесь:  
+                                                                                                                 - alt="Masha and the Bear" → название картинки (важно для доступности)
+                                                                                                                 - loading="lazy" → загружать картинку только при прокрутке (ленивая загрузка)
+                                                                                                                 - decoding="async" → декодировать изображение асинхронно, не блокируя рендер
+                                                                                                                 - так оптимизируется скорость загрузки страницы -->
+</aside>
+
+</section>
+
 </body>
 </html>
