adjustment of elements

--- a/tags.html
+++ b/tags.html
@@ -22,8 +22,16 @@
 
   <!-- Правая колонка с фото (нейтральный div-контейнер) -->
   <div class="image-col">
+
     <img src="kolob.jpg" alt="Kolobok" loading="lazy" decoding="async"> <!-- Путь к картинке. альтернативный текст. Исходные размеры, чтобы избежать «скачков» верстки. Оптимизация загрузки -->
-  </div>
+    <a href="#fairy-tale-1" class="read-btn" onclick="scrollToSection(event, 'fairy-tale-1')">Read</a> <!-- Семантический якорь и запасной вариант:
+                                                                                                        если JS выключен, браузер всё равно перейдёт к секции с id="fairy-tale-1".
+                                                                                                        С JS мы перехватим действие и сделаем плавный скролл. -->
+                                                                                                        <!-- Класс для визуального оформления ссылки как кнопки -->
+                                                                                                        <!-- Обработчик клика: вызываем нашу функцию,
+                                                                                                        передаём объект события (event) и id целевого блока.
+                                                                                                        В inline-обработчиках браузер передаёт event автоматически. -->
+</div>
 
 </section>
 
@@ -37,8 +45,10 @@
   <figure class="image-col"> <!-- Правая колонка: фото как часть контента -->
     <img src="Terem.jpg" alt="" loading="lazy" decoding="async"> <!-- alt можно оставить пустым, если figcaption описывает фото -->
 
-    <!-- Подпись к фото -->
-    <figcaption>Teremok and the shameless Bear</figcaption>
+    <figcaption>Teremok and the shameless Bear</figcaption> <!-- Подпись к фото -->
+
+     <a href="#fairy-tale-2" class="read-btn">Read</a>
+
   </figure>
 
 </section>
@@ -56,9 +66,196 @@
                                                                                                                  - loading="lazy" → загружать картинку только при прокрутке (ленивая загрузка)
                                                                                                                  - decoding="async" → декодировать изображение асинхронно, не блокируя рендер
                                                                                                                  - так оптимизируется скорость загрузки страницы -->
+    
+    <figcaption>
+      <a href="#fairy-tale-3" class="read-btn">Read</a>
+    </figcaption>
+
 </aside>
 
 </section>
+
+<!-- ====================== -->
+<!-- Блоки со сказками      -->
+<!-- ====================== -->
+
+<!-- Первая сказка: Колобок -->
+<section id="fairy-tale-1">
+  <!-- Заголовок сказки -->
+  <h2>Сказка 1. Kolobok</h2>
+
+  <!-- Текст сказки (сюда вставляем полный текст) -->
+  <p>
+    Жил-был старик со старухою. Просит старик:<br>
+    — Испеки, старуха, колобок!<br>
+    — Из чего печь-то? Муки нету, — отвечает ему старуха.<br>
+    — Эх, старуха! По коробу поскреби, по сусеку помети; авось муки и наберется.<br>
+    Взяла старуха крылышко, по коробу поскребла, по сусеку помела, и набралось муки пригоршни с две. Замесила на сметане, изжарила в масле и положила на окошечко постудить.<br>
+    Колобок полежал — полежал, да вдруг и покатился — с окна на лавку, с лавки на пол, по полу да к дверям, перепрыгнул через порог в сени, из сеней на крыльцо, с крыльца — на двор, со двора за ворота, дальше и дальше.<br>
+    Катится колобок по дороге, а навстречу ему заяц:<br>
+    — Колобок, колобок! Я тебя съем.<br>
+    — Не ешь меня, косой зайчик! Я тебе песенку спою, — сказал колобок и запел:<br>
+    Я Колобок, Колобок!<br>
+    Я по коробу скребен,<br>
+    По сусеку метен,<br>
+    На сметане мешон,<br>
+    Да в масле пряжон,<br>
+    На окошке стужон;<br>
+    Я от дедушки ушел,<br>
+    Я от бабушки ушел,<br>
+    И от тебя, зайца, не хитро уйти!<br>
+    И покатился себе дальше; только заяц его и видел!<br>
+    Катится колобок, а навстречу ему волк:<br>
+    — Колобок, колобок! Я тебя съем!<br>
+    — Не ешь меня, серый волк! Я тебе песенку спою, — сказал колобок и запел:<br>
+    (… и так далее, до конца сказки — здесь твой полный текст про лису и съеденного колобка)  
+  </p>
+</section>
+
+
+<!-- Вторая сказка: заготовка -->
+<section id="fairy-tale-2">
+  <h2>Сказка 2. Teremok</h2>
+  <p>
+    Стоит в поле теремок. Бежит мимо мышка-норушка. Увидела теремок, остановилась и спрашивает:<br>
+— Терем-теремок! Кто в тереме живет? Никто не отзывается. Вошла мышка в теремок и стала там жить.<br>
+Прискакала к терему лягушка-квакушка и спрашивает:<br>
+— Терем-теремок! Кто в тереме живет?<br>
+— Я, мышка-норушка! А ты кто?<br>
+— А я лягушка-квакушка.<br>
+— Иди ко мне жить! Лягушка прыгнула в теремок. Стали они вдвоем жить.<br>
+Бежит мимо зайчик-побегайчик. Остановился и спрашивает:<br>
+— Терем-теремок! Кто в тереме живет?<br>
+— Я, мышка-норушка!<br>
+— Я, лягушка-квакушка!<br>
+
+— А ты кто?<br>
+— А я зайчик-побегайчик.<br>
+— Иди к нам жить! Заяц скок в теремок! Стали они втроем жить.<br>
+Идет мимо лисичка-сестричка. Постучала в окошко и спрашивает:<br>
+— Терем-теремок! Кто в тереме живет?<br>
+— Я, мышка-норушка.<br>
+— Я, лягушка-квакушка.<br>
+— Я, зайчик-побегайчик.<br>
+— А ты кто?<br>
+— А я лисичка-сестричка.<br>
+— Иди к нам жить! Забралась лисичка в теремок. Стали они вчетвером жить.<br>
+Прибежал волчок-серый бочок, заглянул в дверь и спрашивает:<br>
+— Терем-теремок! Кто в тереме живет?<br>
+— Я, мышка-норушка.<br>
+— Я, лягушка-квакушка.<br>
+— Я, зайчик-побегайчик.<br>
+— Я, лисичка-сестричка.<br>
+— А ты кто?<br>
+— А я волчок-серый бочок.<br>
+— Иди к нам жить!<br>
+Волк влез в теремок. Стали они впятером жить. Вот они в теремке живут, песни поют.<br>
+Вдруг идет медведь косолапый. Увидел медведь теремок, услыхал песни, остановился и заревел во всю мочь:<br>
+— Терем-теремок! Кто в тереме живет?<br>
+— Я, мышка-норушка.<br>
+— Я, лягушка-квакушка.<br>
+— Я, зайчик-побегайчик.<br>
+— Я, лисичка-сестричка.<br>
+— Я, волчок-серый бочок.<br>
+— А ты кто?<br>
+— А я медведь косолапый.<br>
+— Иди к нам жить!<br>
+Медведь и полез в теремок. Лез-лез, лез-лез — никак не мог влезть и говорит:<br>
+— А я лучше у вас на крыше буду жить.<br>
+— Да ты нас раздавишь.<br>
+— Нет, не раздавлю.<br>
+— Ну так полезай! Влез медведь на крышу и только уселся — трах! — развалился теремок.<br>
+Затрещал теремок, упал набок и весь развалился. Еле-еле успели из него выскочить мышка-норушка, лягушка-квакушка, зайчик-побегайчик, лисичка-сестричка, волчок-серый бочок — все целы и невредимы.<br>
+Принялись они бревна носить, доски пилить — новый теремок строить.<br>
+Лучше прежнего выстроили!
+</p>
+</section>
+
+
+<!-- Третья сказка: заготовка -->
+<section id="fairy-tale-3">
+  <h2>Сказка 3. Masha and the Bear</h2>
+  <p>
+    Жили-были дедушка да бабушка. Была у них внучка Машенька.<br>
+Собрались раз подружки в лес - по грибы да по ягоды. Пришли звать с собой и Машеньку.<br>
+- Дедушка, бабушка, - говорит Машенька, - отпустите меня в лес с подружками!<br>
+Дедушка с бабушкой отвечают:<br>
+- Иди, только смотри от подружек не отставай - не то заблудишься.<br>
+Пришли девушки в лес, стали собирать грибы да ягоды. Вот Машенька - деревце за деревце, кустик за кустик - и ушла далеко-далеко от подружек.<br>
+Стала она аукаться, стала их звать. А подружки не слышат, не отзываются.<br>
+Ходила, ходила Машенька по лесу - совсем заблудилась.<br>
+Пришла она в самую глушь, в самую чащу. Видит-стоит избушка. Постучала Машенька в дверь - не отвечают. Толкнула она дверь, дверь и открылась.<br>
+Вошла Машенька в избушку, села у окна на лавочку.<br>
+Села и думает:<br>
+„Кто же здесь живёт? Почему никого не видно?.." А в той избушке жил большущий медведь. Только его тогда дома не было: он по лесу ходил. Вернулся вечером медведь, увидел Машеньку, обрадовался.<br>
+- Ага, - говорит, - теперь не отпущу тебя! Будешь у меня жить. Будешь печку топить, будешь кашу варить, меня кашей кормить.<br>
+Потужила Маша, погоревала, да ничего не поделаешь. Стала она жить у медведя в избушке.<br>
+Медведь на целый день уйдёт в лес, а Машеньке наказывает никуда без него из избушки не выходить.<br>
+- А если уйдёшь, - говорит, - всё равно поймаю и тогда уж съем!<br>
+Стала Машенька думать, как ей от медведя убежать. Кругом лес, в какую сторону идти - не знает, спросить не у кого...<br>
+Думала она, думала и придумала.<br>
+Приходит раз медведь из лесу, а Машенька и говорит ему:<br>
+- Медведь, медведь, отпусти меня на денёк в деревню: я бабушке да дедушке гостинцев снесу.<br>
+- Нет, - говорит медведь, - ты в лесу заблудишься. Давай гостинцы, я их сам отнесу!<br>
+А Машеньке того и надо!<br>
+Напекла она пирожков, достала большой-пребольшой короб и говорит медведю:<br>
+- Вот, смотри: я в короб положу пирожки, а ты отнеси их дедушке да бабушке. Да помни: короб по дороге не открывай, пирожки не вынимай. Я на дубок влезу, за тобой следить буду!<br>
+- Ладно, - отвечает медведь, - давай короб! Машенька говорит:<br>
+- Выйди на крылечко, посмотри, не идёт ли дождик! Только медведь вышел на крылечко, Машенька сейчас же залезла в короб, а на голову себе блюдо с пирожками поставила.<br>
+Вернулся медведь, видит - короб готов. Взвалил его на спину и пошёл в деревню.<br>
+Идёт медведь между ёлками, бредёт медведь между берёзками, в овражки спускается, на пригорки поднимается. Шёл-шёл, устал и говорит:<br>
+Сяду на пенёк,<br> 
+Съем пирожок!<br>
+А Машенька из короба:<br>
+Вижу, вижу!<br> 
+Не садись на пенёк,<br> 
+Не ешь пирожок!<br> 
+Неси бабушке,<br> 
+Неси дедушке!<br>
+- Ишь какая глазастая, - говорит медведь, - всё видит! Поднял он короб и пошёл дальше.<br>
+Шёл-шёл, шёл-шёл, остановился, сел и говорит:<br>
+Сяду на пенёк,<br> 
+Съем пирожок!<br>
+А Машенька из короба опять:<br>
+Вижу, вижу!<br> 
+Не садись на пенёк,<br> 
+Не ешь пирожок!<br> 
+Неси бабушке,<br> 
+Неси дедушке!<br>
+Удивился медведь:<br>
+- Вот какая хитрая! Высоко сидит, далеко глядит! Встал и пошёл скорее.<br>
+Пришёл в деревню, нашёл дом, где дедушка с бабушкой жили, и давай изо всех сил стучать в ворота:<br>
+- Тук-тук-тук! Отпирайте, открывайте! Я вам от Машеньки гостинцев принёс.<br>
+А собаки почуяли медведя и бросились на него. Со всех дворов бегут, лают.<br>
+Испугался медведь, поставил короб у ворот и пустился в лес без оглядки.<br>
+Вышли тут дедушка да бабушка к воротам. Видят- короб стоит.<br>
+- Что это в коробе? - говорит бабушка.<br>
+А дедушка поднял крышку, смотрит и глазам своим не верит: в коробе Машенька сидит - живёхонька и здоровёхонька.<br>
+Обрадовались дедушка да бабушка. Стали Машеньку обнимать, целовать, умницей называть.<br>
+</p>
+</section>
+
+<script>
+  // Функция плавного скролла к элементу с указанным id.
+  // Вызывается из onclick у ссылки.
+  function scrollToSection(event, id) {
+    event.preventDefault();                         // 1) Отменяем стандартное поведение <a>:
+                                                    //    без этого браузер мгновенно "прыгнет" к #id и запишет его в адресную строку.
+
+    const target = document.getElementById(id);     // 2) Находим целевой элемент по его id.
+    if (!target) return;                            // 3) Если элемента нет — выходим, чтобы не было ошибок.
+
+    // 4) Плавно прокручиваем страницу к секции.
+    target.scrollIntoView({
+      behavior: 'smooth',                           //   включаем анимацию плавного скролла
+      block: 'start',                               //   выравниваем верх секции к верху окна
+      inline: 'nearest'                             //   горизонтально — к ближайшему краю (на случай горизонт. контейнеров)
+    });
+
+    // Примечание: мы не меняем URL (хеш) — история браузера не "засоряется",
+    // кнопка "Назад" не начнёт вести к промежуточным якорям.
+  }
+</script>
 
 </body>
 </html>
